[internal][interfaces][http] Extract http handlers from main and update docs
